src/test/ui/const-generics/different_byref_simple.full.stderr
error[E0308]: mismatched types
  --> $DIR/different_byref_simple.rs:11:9
   |
LL |     u = ConstUsize::<4> {};
   |         ^^^^^^^^^^^^^^^^^^ expected `3_usize`, found `4_usize`
   |
   = note: expected struct `ConstUsize<3_usize>`
              found struct `ConstUsize<4_usize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
